# DEZoomcamp25

./: .gitignore  Dockerfile  README.md  compose.yml  docker_cmd  ingest_data.py  main.tf  pipeline.py  pyproject.toml  upload_data.py  variables.tf
01-docker-terraform/: README.md
01-docker-terraform/01-docker-sql/: .env  Dockerfile  compose.yml
01-docker-terraform/01-docker-sql/queries/: question-03.sql  question-04.sql  question-05.sql  question-06.sql
02-workflow-orchestration/flows/: 02_postgres_taxi.yaml
pgadmin_conn_data/: pgadmin4.db
pgadmin_conn_data/sessions/: 3164826c-5812-483f-a087-69914e4eb79e  cd91f0b7-0114-426b-9c60-79ce01eb7709
